# omrt-doc-extractor

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_FIX_GEOMETRY_V2.md  CLAUDE_CODE_PROMPTS.md  PROJECT_PLAN.md  README.md  pyproject.toml
data/archive/: glossary.json
data/inputs/test_project/: README.md
data/outputs/: draka_grasshopper.geojson
data/outputs/checkpoints/: Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p1.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p10.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p100.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p101.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p102.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p103.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p104.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p105.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p106.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p107.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p108.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p109.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p11.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p110.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p111.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p112.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p113.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p114.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p115.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p116.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p117.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p118.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p119.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p12.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p120.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p121.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p122.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p123.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p124.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p125.json  Bijlage_1_-_Beeldkwaliteitplan_Nieuw_Legmeer.pdf_p126.json  (+136 more)
data/test_output/: amenities.csv  geo_context.json
docs/: architecture.md  schema_reference.md  written_response.md
grasshopper/: README.md
scripts/: build_design_intent.py  copy_to_grasshopper.py  crossval_heights.py  draka_gml_heights.py  explore_gml.py  extract_table_pages.py  geojson_to_obj.py  gml_attach_and_export.py  gml_to_geojson.py  gml_zone_framework.py  gml_zones_heights.py  migrate_outputs.py  run_geometry.py  sanity_check.py  seed_glossary.py  test.py  test.sh
src/omrt_extractor/: __init__.py  cli.py  config.py  constraint_filters.py  cross_validate.py  enrich.py  enrich_zones.py  extract.py  geometry.py  infer.py  knowledge.py  massing.py  output.py  preprocess.py  reconcile.py  schemas.py  validators.py
tests/: __init__.py  conftest.py  test_constraint_filters.py  test_cross_validate.py  test_enrich.py  test_extract.py  test_geometry.py  test_massing.py  test_preprocess.py  test_reconcile.py  test_schemas.py  test_validators.py  test_viewer.py
viewer/: streamlit_app.py
(+84 files in other folders)
