[project]
name = "omrt-doc-extractor"
version = "0.1.0"
description = "Document-to-Grasshopper extraction pipeline for Dutch project document bundles"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "OMRT prototype" },
]
license = { text = "Proprietary" }

dependencies = [
    # Core schema and settings
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pydantic-ai>=0.0.13",
    # Document processing
    "pymupdf>=1.24",
    "Pillow>=10.0",
    # Geometry
    "shapely>=2.0",
    "compas>=2.0",
    "pyproj>=3.6",
    # HTTP and caching
    "httpx>=0.27",
    "diskcache>=5.6",
    # CLI and viewer
    "streamlit>=1.35",
    "plotly>=5.20",
    "typer>=0.12",
    "rich>=13.7",
    # Logging
    "loguru>=0.7",
    # LLM provider
    "anthropic>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.21",  # HTTP mocking for httpx in tests
    "python-dotenv>=1.0",
]

[project.scripts]
omrt = "omrt_extractor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omrt_extractor"]

[tool.hatch.build.targets.wheel.shared-data]
"src/omrt_extractor/prompts" = "omrt_extractor/prompts"

# -------------------------------------------------------------------
# Ruff
# -------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line-length, handled by formatter
    "RUF001", # ambiguous unicode in strings — intentional (–, ×) for display
    "RUF002", # ambiguous unicode in docstrings — intentional (–) for ranges
    "RUF003", # ambiguous unicode in comments — intentional (×)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts allowed in tests

# -------------------------------------------------------------------
# Pytest
# -------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "live_api: tests that hit a live API; deselected in CI",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic._internal._fields",
    "ignore::ResourceWarning",
]

# -------------------------------------------------------------------
# Mypy
# -------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "compas.*",
    "shapely.*",
    "plotly.*",
    "fitz.*",
    "pymupdf.*",
]
ignore_missing_imports = true
follow_imports = "skip"
